# JetService

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  log.txt
.github/workflows/: cmake-multi-platform.yml
include/: daemonizer.h  db.h  demonizer.h  logger.h  parser.h  restclient.h  testrecord.h  testserver.h
src/: daemonizer.cpp  db.cpp  demonizer.cpp  main.cpp  restclient.cpp  testserver.cpp
